--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -112,7 +112,7 @@ include::examples/fmi_ls_struct_manifest_example.xml[]
 
 * org.fmi-standard.fmi-ls-struct.map
 
-Requirement for the matching: The number of domains must be the same and the names(+type+size) of all domains (i.e., `variableKind=org.fmi-standard.fmi-ls-struct.domain`) must match. If all domains match, connect all these domains. Connect all co-domains (`variableKind=org.fmi-standard.fmi-ls-struct.`) that match. 
+Requirement for the matching: The number of domains must be the same and the names(+type+size) of all domains (i.e., `variableKind=org.fmi-standard.fmi-ls-struct.domain`) must match. If all domains match, connect all these domains. Connect all codomains (`variableKind=org.fmi-standard.fmi-ls-struct.codomain`) that match. 
 Don't connect any other terminal member variables.
 
 _[This indicates that the variableKind of the member should be considered for the connection of the individual members of the terminal.]_
@@ -129,10 +129,10 @@ Thus no additional files are used, but all information is stored in the Terminal
 
 n-d Lookup tables::  In the context of this layered standard, an n-D lookup table is a sampled representation of a function of n input variables latexmath:[y=F(x_1, x_2, x_3, \dots, x_n)] sampled on the vertices of a rectlinear grid. Such an n-D lookup table could be also called a map from the n-dimensional domain to a .
 
-In <<ASAM-MCD2>> a 1-d lookup table is called *CURVE*, a 2-d lookup table is called *MAP*, and a 3-d lookup table is called *CUBOID*. 4-d and 5-d lookup tables are called *CUBE_4* and \*CUBE\_5*, respectively. Higher dimensional lookup tables are not defined in <<ASAM-MCD2>>.
+_[In <<ASAM-MCD2>> a 1-d lookup table is called *CURVE*, a 2-d lookup table is called *MAP*, and a 3-d lookup table is called *CUBOID*. 4-d and 5-d lookup tables are called *CUBE_4* and \*CUBE\_5*, respectively. Higher dimensional lookup tables are not defined in <<ASAM-MCD2>>.]_
 
-Domain:: For each of the n dimensions of the lookup table an array variable (typically a parameter or a constant) with the sampling points (along this dimension) of the lookup-table must be referenced.
-Codomain:: The sampled function values are stored in this references n-dimensional array.
+Domain:: For each of the n dimensions of the lookup table an 1d array variable (typically a parameter or a constant) with the sampling points (along this dimension) of the lookup-table must be referenced.
+Codomain:: The sampled function values are stored in this n-dimensional array. There can be several codomains for the same set of domains and domain inputs.
 
 Options:: 
 * Optionally, for dimension a variable (typically an input or a local variable) can be referenced that represent the current operating point (along this dimension)
@@ -152,13 +152,17 @@ VariableKind::
 
 New variable kinds defined by this standard
 
-*  org.fmi-standard.fmi-ls-struct.domain
+*  `org.fmi-standard.fmi-ls-struct.domain`
 
-*  org.fmi-standard.fmi-ls-struct.codomain 
+*  `org.fmi-standard.fmi-ls-struct.codomain`
 
-*  org.fmi-standard.fmi-ls-struct.domainInput
+*  `org.fmi-standard.fmi-ls-struct.domainInput` : this defines the operating point. The domain_input isn't required to be a scalar, it could be variable with several dimensions.
+However the size of each domain_inputs must be the same for each domain: 
+For a nonscalar inputs v=[v1,...vn], w=[w1,...wn], ... the function is evalutated elementwise and we get an output vector z=[f(v1, w1, ...), .... f(vn, wn, ...)]
 
-*  org.fmi-standard.fmi-ls-struct.codomainOutput
+*  `org.fmi-standard.fmi-ls-struct.codomainOutput`
+
+Additional terminal member variables that do not fit into these categories shall not have a Variablekind starting with `org.fmi-standard.fmi-ls-struct`. 
 
 
 === Example
