--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -142,7 +142,7 @@ Options::
 
 Used FMI 3.0 Concepts: 
 
-Terminals:: 
+Terminals:: ToDo: write that order matters for the domains, domainInputs, codomains, codomainOutputs.
 
 Variables Names:: 
 
@@ -154,11 +154,11 @@ New variable kinds defined by this standard
 
 *  `org.fmi-standard.fmi-ls-struct.domain`
 
-*  `org.fmi-standard.fmi-ls-struct.codomain`
-
-*  `org.fmi-standard.fmi-ls-struct.domainInput` : this defines the operating point. The domain_input isn't required to be a scalar, it could be variable with several dimensions.
+*  `org.fmi-standard.fmi-ls-struct.domainInput` : this optional element defines the operating point. If present must be listed directly after the corresponding domain. The domain_input isn't required to be a scalar, it could be variable with several dimensions.
 However the size of each domain_inputs must be the same for each domain: 
 For a nonscalar inputs v=[v1,...vn], w=[w1,...wn], ... the function is evalutated elementwise and we get an output vector z=[f(v1, w1, ...), .... f(vn, wn, ...)]
+
+*  `org.fmi-standard.fmi-ls-struct.codomain`
 
 *  `org.fmi-standard.fmi-ls-struct.codomainOutput`
 
