--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,7 +1,7 @@
 = Layered Standard for Structured Data
 :sectnums:
 :sectnumlevels: 5
-:toc: left
+#:toc: left
 :toc-title: Contents
 :toclevels: 5
 :xrefstyle: short
@@ -18,8 +18,8 @@
 
 ToDo: has to concentrate more on lookup tables
 
-Based on FMI 3.0, this layered standard defines how variables (especially parameters) of an FMU can be structured and grouped in a more flexible way than with the "structured naming convention" of the FMI Standard (version 1.0, 2.0, 3.0).
-Additionially it defines special semantics to certain parameter groups in order to describe regular maps.
+Based on FMI 3.0, this layered standard defines how variables (especially parameters) of an FMU can be structured and grouped in a more flexible way than with the "structured naming convention" of the FMI Standard.
+The first version of this layered standard is focused on the definition of sampled maps.
 
 {empty} +
 {empty}
@@ -36,11 +36,11 @@ The licenses text can be found in the https://raw.githubusercontent.com/modelica
 
 === Motivation 
 
-For many use cases grouping of several variables (especially parmaters) is benefical. 
-A very important application is the definition of maps defined on rectilinear grids,  through several array variables, which requires additional semantics.
+For many use cases, the grouping of variables gives the user a better overview about the usage of variables. For certain groupings the importing tool might be able to provide a more user-friendly interface.
+FMUs might use maps/functions sampled on the vertices of a grid to calculate output values. The values at these sampling points and even the locations of the sampling points might get exposed as parameter variables of the FMU to allow calibrations. However, the FMI standard only defines n-dimensional array variable but doesn't define any relation between these variables. This layered standard defines how to group variables to represent maps.
 E.g., CombiTable1D or CombiTable2D blocks of the Modelica standard library used within an FMU can be exposed with this approach.
 
-This layered standards enables these features based on the concept of Terminals from the FMI Standard of FMI 3.0.
+This layered standard uses terminals of the FMI 3.0 standard to represent structures like maps by grouping variables in terminals. Terminals are used to group variables and already define means to connect its variables between FMUs. Such a connections could ensure that the same map values are used by different FMUs or allow one FMU to provide the map values to be used by other FMUs.
 
 === How to Read This Document
 
@@ -103,84 +103,259 @@ include::examples/fmi_ls_struct_manifest_example.xml[]
 [#common-concepts]
 == Common concepts for the representation of maps 
 
-===  Defintions
+===  Definitions
+
+n-D lookup table:: In the context of this layered standard, an n-D lookup table is a sampled representation of a function of n input variables latexmath:[(y_1, y_2, \dots, y_m) = F(x_1, x_2, x_3, \dots, x_n)], sampled on points of the n-dimensional domain. Such an n-D lookup table could be also called a map from the n-dimensional domain to an m-dimensional codomain.
 
 
-=== Defintion of `terminalKind`s
+==== Definition of `terminalKind` attribute values
 
-* TerminalKind `org.fmi-standard.fmi-ls-struct.rectilinearGridMap` for maps defined on rectilinear grids.
-* TerminalKind `org.fmi-standard.fmi-ls-struct.rectilinearGridMap` for maps defined by unsructured tuples of ("point cloud").
-
-=== `variableKinds` of terminal member variables:
-
-We want to represent a map from a domain set to a codomain through by providing the points in the domain set and the values they are mapped to.
-
-* `org.fmi-standard.fmi-ls-struct.domain`:: For each of the n dimensions of the domain set a 1d array variable (typically a parameter or a constant) of coordinates is provided
-
-* `org.fmi-standard.fmi-ls-struct.domainInput`:: Optionally, for for each `domain` variable at most one array variable (typically an input or a local variable) can be referenced that represents the current operating point (along this dimension). If present must be listed directly after the corresponding domain. The domain_input isn't required to be a scalar, it could be variable with several dimensions. However the size of each domainInput must be the same for each domain: For a nonscalar inputs v=[v1,...vn], w=[w1,...wn], ... the function is evalutated elementwise and we get an output vector z=[f(v1, w1, ...), .... f(vn, wn, ...)]
-
-* `org.fmi-standard.fmi-ls-struct.codomain`:: For each of the reprensented points in the domain set, the values to which they are mapped are represented. _[There can be multiple terminal member variables with `variablKind` `codomain` to reperenset multiple maps in one terminal.]_
-
-* `org.fmi-standard.fmi-ls-struct.domainOutput`:: Optionally, for for each `domain` variable at most one array variable (typically an input or a local variable) can be referenced that represents calculted output value of the map. Here the order in the `TerminalsAndIcons.xml`matters: if present, a `domainOutput` variable is defined directly afte the corresponding `codomain` variable.
-
-* Additional terminal member variables that do not fit into these categories shall not have a Variablekind starting with `org.fmi-standard.fmi-ls-struct`. 
+* TerminalKind `org.fmi-standard.fmi-ls-struct.map.rectilinearGrid` for maps defined on the vertices of a rectilinear grid.
+* TerminalKind `org.fmi-standard.fmi-ls-struct.map.combitable1d` for 1-d maps defined on the vertices of a rectilinear grid, stored in a single matrix.
+* TerminalKind `org.fmi-standard.fmi-ls-struct.map.combitable2d` for 2-d maps defined on the vertices of a rectilinear grid, in a single matrix.
+* TerminalKind `org.fmi-standard.fmi-ls-struct.map.irregular` for maps defined by unstructured tuples of ("point cloud").
 
 
-=== Definition of Matching rules
+==== `variableKind` attribute values of terminal member variables:
+
+We want to represent a map from a domain set to a codomain by providing points in the domain set and the values they are mapped to.
+
+* `org.fmi-standard.fmi-ls-struct.map.domain`:: For each of the n dimensions of the domain set a 1-dimensional array variable (typically a parameter or a constant) of coordinates (along this dimension) is provided
+
+* `org.fmi-standard.fmi-ls-struct.map.domainInput`:: Optionally, for each `domain` variable at most one variable (typically an input or a local variable) can be referenced that represents the current operating point (along this dimension).
+If present, it must be listed directly after the corresponding domain.
+The domain_input isn't required to be a scalar, it could be variable with several dimensions.
+However the size of each `domainInput` must be the same for each domain: For nonscalar inputs latexmath:[v=[v_1,\dots,v_n\], w=[w_1, \dots, w_n\], \dots] the function is evalutated elementwise and we get an output vector latexmath:[z=[f(v_1, w_1, \dots), \dots, f(v_n, w_n, \dots)]].
+
+* `org.fmi-standard.fmi-ls-struct.map.codomain`:: For each of the represented points in the domain set, the values to which they are mapped are represented.
+_[There can be multiple terminal member variables with `variablKind` `codomain` to reperenset multiple maps in one terminal.]_
+
+* `org.fmi-standard.fmi-ls-struct.map.domainOutput`:: Optionally, for each `domain` variable at most one array variable (typically an input or a local variable) can be referenced that represents calculted output value of the map.
+If present, a `domainOutput` variable must be listed directly after the corresponding `codomain` variable.
+
+* Additional terminal member variables can be added to the terminal as related variables but if they do not fit into one of the above categories, they shall not have a `variableKind' starting with `org.fmi-standard.fmi-ls-struct`. 
+
+
+==== Definition of map specific `matchingRule`
 
 * org.fmi-standard.fmi-ls-struct.map
 
-Requirement for the matching: The number of domains must be the same and the terminal member names (+ variables type + size) of all domains (i.e., `variableKind=org.fmi-standard.fmi-ls-struct.domain`) must match. If all domains match, connect all these domains. Connect all codomains (`variableKind=org.fmi-standard.fmi-ls-struct.codomain`) that match. 
+Requirement for the matching:
+The number of domains entries must be the same.
+The terminal member names, its data types and the (effective) size and of all domains (`variableKind=org.fmi-standard.fmi-ls-struct.map.domain`) must match.
+If all domains match, connect all these domains.
+Connect all codomains (`variableKind=org.fmi-standard.fmi-ls-struct.map.codomain`) that match. 
 Don't connect any other terminal member variables.
 
-_[This indicates that the variableKind of the member should be considered for the connection of the individual members of the terminal.]_
+_[This indicates that the variableKind of the member must be considered for the connection of the individual members of the terminal.]_
 
 === Structure of the FMU archive
 
-This layerd standard uses and extends the "Terminals and Icons Concept" of FMI 3.0. All information is stored in the TerminalasAndIcons.xml file in the TerminalsAndIcons folder of an FMU.
+This layered standard uses and extends the "Terminals and Icons Concept" of FMI 3.0. All information is stored in the TerminalsAndIcons.xml file in the TerminalsAndIcons folder of an FMU.
 
 
-==  Maps on rectilinear grid
+==  Maps sampled on rectilinear grids
 
 === Definitions
 
-n-d Lookup tables::  In the context of this layered standard, an n-D lookup table is a sampled representation of a function of n input variables latexmath:[y=F(x_1, x_2, x_3, \dots, x_n)] sampled on the vertices of a rectlinear grid. Such an n-D lookup table could be also called a map from the n-dimensional domain to a .
+n-d lookup table on rectilinear grid::  In the context of this layered standard, an n-D lookup table is a sampled representation of a function of n input variables latexmath:[y=F(x_1, x_2, x_3, \dots, x_n)] sampled on the vertices of a rectilinear grid.
 
-_[In <<ASAM-MCD2>> a 1-d lookup table is called *CURVE*, a 2-d lookup table is called *MAP*, and a 3-d lookup table is called *CUBOID*. 4-d and 5-d lookup tables are called *CUBE_4* and \*CUBE\_5*, respectively. Higher dimensional lookup tables are not defined in <<ASAM-MCD2>>.]_
+_[In <<ASAM-MCD2>>, such a 1-d lookup table is called a *CURVE*, a 2-d lookup table is called *MAP*, and a 3-d lookup table is called *CUBOID*. 4-d and 5-d lookup tables are called *CUBE_4* and \*CUBE\_5*, respectively. Higher dimensional lookup tables are not defined in <<ASAM-MCD2>>.]_
 
-Domain:: For each of the n dimensions of the lookup table an 1d array variable (typically a parameter or a constant) with the sampling points (along this dimension) of the lookup-table must be referenced.
-Codomain:: The sampled function values are stored in this n-dimensional array. There can be several codomains for the same set of domains and domain inputs.  ToDo: size of a codomain array = Producut of sized ot the domain arrays.
+TerminalKind::
+A terminal with terminalKind `org.fmi-standard.fmi-ls-struct.map.rectilinearGrid` defines  a map on the vertices of a rectilinear grid.
 
+domain:: For each of the n dimensions of the lookup table a 1 dimensional array variable (typically a parameter or a constant) with the sampling points (along this dimension) of the lookup-table must be referenced with variableKind `org.fmi-standard.fmi-ls-struct.map.domain`.
+
+codomain:: For each of the m dimensions of the codomain, the sampled function values (along this dimension of the codomain) are stored in this n-dimensional array variable and references with variableKind `org.fmi-standard.fmi-ls-struct.map.codomain`.
+
+The length of the i-th domain vector must be equal to length of the i-th codomain dimension.
+
+_[Note: The standard doesn't define how maps have to be represented in a GUI. In particular, the standard doesn't define if the first two dimensions are displayed as in columns or rows. However, for the example lookup tables of this document, first dimensions are shown columns and the seconds dimensions are shown as rows.]_
 
 
 === Example
 
-[source, xml]
-----
-include::examples/terminalsAndIcons.xml[]
-----
+
+[[rectilinear_example]]
+[cols="1,1,1,1,1"]
+|====
+2.2+|v
+3+|y
+|2.0
+|4.0
+|7.0
+
+.2+|x
+|2.0
+|3.0
+|2.0 
+|5.0 
+
+|3.0
+|4.0 
+|1.0
+|2.0
+|====
+
+
+The individual variables of the example 2-dimensional map on a rectilinear grid are given in the modelDescription.xml.
 
 [source, xml]
 ----
 include::examples/modelDescription.xml[]
 ----
 
+These variables are grouped in a terminal with the terminalKind `org.fmi-standard.fmi-ls-struct.map.rectilinearGrid` in the TerminalsAndIcons.xml file:
 
-ToDo: Add description how to handle a combitable.
+[source, xml]
+----
+include::examples/terminalsAndIcons.xml[]
+----
 
-==  Irregular map ("Point Cloud")
+
+
+=== Referencing Modelica library Combitables matrices
+
+The Modelica library defines lookup tables which are stored in a single matrix (https://doc.modelica.org/om/Modelica.Blocks.Tables.html)
+
+
+==== Referencing Modelica library CombiTable1d
+
+===== Example
+
+
+[[combitable1d_example]]
+[cols="1,1,1,2"]
+|====
+|x.0
+|v1
+|v2
+|v3
+
+|1.0
+|2.0
+|4.0
+|7.0
+
+|2.0 
+|3.0
+|2.0 
+|5.0 
+
+|3.0
+|4.0 
+|1.0
+|2.0
+|====
+
+[source, xml]
+----
+include::examples/combi1d_modelDescription.xml[]
+----
+
+The following example shows how to reference the Modelica library CombiTable1D matrix `combitable1d_example` in the TerminalsAndIcons.xml file:
+[source, xml]
+----
+include::examples/combi1d_terminalsAndIcons.xml[]
+----
+
+
+==== Referencing Modelica library CombiTable2d
+
+===== Example
+
+[[combitable2d_example]]
+[cols="1,1,1,2"]
+|====
+|
+|1.0
+|2.0
+|3.0
+
+|1.0
+|1.0 
+|3.0
+|5.0 
+
+|2.0
+|2.0
+|4.0 
+|6.0
+|====
+
+[source, xml]
+----
+include::examples/combi2d_modelDescription.xml[]
+----
+
+The following example shows how to reference the Modelica library CombiTable2D matrix `combitable2d_example` in the TerminalsAndIcons.xml file:
+[source, xml]
+----
+include::examples/combi2d_terminalsAndIcons.xml[]
+----
+
+
+
+
+
+==  Maps sampled on a irregular grid ("Point Cloud")
 
 
 === Definitions
 
 Definition of domains and codomains as above
 
-For domains x=(x_1, x_2, ... x_n), y=(y_1, y_2, ...y_n), z=(z_1, z_2, z_3, ...z_n) ... and codomain u (u_1, u_2,...u_n), v=(v_1, v_2, ... v_n), the tuples of (xi, yi, zi, ...) are mapped to  values (ui, vi, ...).
+For domains latexmath:[x=[x_1, x_2, \dots, x_n\], y=[y_1, y_2, \dots, y_n\], z=[z_1, z_2, \dots, z_n\], \dots]
+and codomains latexmath:[u=[u_1, u_2, \dots, u_n\], v=[v_1, v_2, \dots, v_n\], \dots], the tuple latexmath:[(x_i, y_i, z_i, \dots)] gets mapped to the values latexmath:[(u_i, v_i, ...)].
 
-All domains and codomains must have the same lenght
+All domains and codomains must have the same length.
 
+_[Note: A map on a 1 dimensional domain can be equivalently represented with a terminal of `terminalKind="org.fmi-standard.fmi-ls-struct.map.irregular"` or a terminal with `terminalKind="org.fmi-standard.fmi-ls-struct.map.rectilinearGrid"`.]_
 
 ToDo add picture
+
+=== Example
+
+[[irregular_example]]
+[cols="1,1,1,1,1"]
+
+|====
+|x
+|y
+|z
+|v1
+|v2
+
+|2.0
+|10.0
+|10.0
+|11.0
+|1.0
+
+|3.0
+|25.0
+|28.0
+|1.0
+|4.0
+
+|10.0
+|30.0
+|30.0
+|13.0
+|3.0
+
+|====
+
+[source, xml]
+----
+include::examples/irregular_terminalsAndIcons.xml[]
+----
+
+[source, xml]
+----
+include::examples/irregular_modelDescription.xml[]
+----
 
 
 
