--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -16,19 +16,17 @@
 :revnumber: 1.0
 :icons: font
 
-ToDo: has to concentrate more on lookup tables
-
 Based on FMI 3.0, this layered standard defines how variables (especially parameters) of an FMU can be structured and grouped in a more flexible way than with the "structured naming convention" of the FMI Standard.
 The first version of this layered standard is focused on the definition of sampled maps.
 
 {empty} +
 {empty}
 
-Copyright (C) 2012-2024 The Modelica Association Project FMI.
+Copyright (C) 2024 The Modelica Association Project FMI.
 
 This document is licensed under the Attribution-ShareAlike 4.0 International license.
 The code is released under the 2-Clause BSD License.
-The licenses text can be found in the https://raw.githubusercontent.com/modelica/fmi-standard/master/LICENSE.txt[LICENSE.txt] file that accompanies this distribution.
+The licenses text can be found in the https://raw.githubusercontent.com/modelica/fmi-standard/main/LICENSE.txt[LICENSE.txt] file that accompanies this distribution.
 
 {empty}
 
