--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -230,12 +230,12 @@ include::examples/terminalsAndIcons.xml[]
 
 
 
-=== Referencing Modelica library Combitables
+=== Referencing Modelica Standard Library libraryCombitables
 
-The Modelica library defines lookup tables which are stored in a single matrix (https://doc.modelica.org/om/Modelica.Blocks.Tables.html)
+The Modelica Standard Library defines lookup tables which are stored in a single matrix (https://doc.modelica.org/om/Modelica.Blocks.Tables.html)
 
 
-==== Referencing Modelica library CombiTable1d
+==== Referencing Modelica Standard Library CombiTable1d
 
 ===== Example
 
@@ -269,14 +269,14 @@ The Modelica library defines lookup tables which are stored in a single matrix (
 include::examples/combi1d_modelDescription.xml[]
 ----
 
-The following example shows how to reference the Modelica library CombiTable1D matrix `combitable1d_example` in the TerminalsAndIcons.xml file:
+The following example shows how to reference the Modelica Standard Library CombiTable1D matrix `combitable1d_example` in the TerminalsAndIcons.xml file:
 [source, xml]
 ----
 include::examples/combi1d_terminalsAndIcons.xml[]
 ----
 
 
-==== Referencing Modelica library CombiTable2d
+==== Referencing Modelica Standard Library CombiTable2d
 
 ===== Example
 
@@ -304,7 +304,7 @@ include::examples/combi1d_terminalsAndIcons.xml[]
 include::examples/combi2d_modelDescription.xml[]
 ----
 
-The following example shows how to reference the Modelica library CombiTable2D matrix `combitable2d_example` in the TerminalsAndIcons.xml file:
+The following example shows how to reference the Modelica Standard Library CombiTable2D matrix `combitable2d_example` in the TerminalsAndIcons.xml file:
 [source, xml]
 ----
 include::examples/combi2d_terminalsAndIcons.xml[]
