Fix description of domainOutput

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -139,7 +139,7 @@ For each of the represented points in the domain set, the values to which they a
 _[There can be multiple terminal member variables with `variablKind` `codomain` to represent multiple maps in one terminal.]_
 
 `org.fmi-standard.fmi-ls-struct.map.domainOutput`::
-Optionally, for each `domain` variable at most one array variable (typically an input or a local variable) can be referenced that represents calculated output value of the map.
+Optionally, for each `domain` variable at most one array variable (typically an output or a local variable) can be referenced that represents calculated output value of the map.
 If present, a `domainOutput` variable must be listed directly after the corresponding `codomain` variable.
 
 Additional terminal member variables can be added to the terminal as related variables but if they do not fit into one of the above categories, they shall not have a `variableKind' starting with `org.fmi-standard.fmi-ls-struct`. 
