--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -142,7 +142,7 @@ _[There can be multiple terminal member variables with `variablKind` `codomain` 
 Optionally, for each `domain` variable at most one array variable (typically an output or a local variable) can be referenced that represents calculated output value of the map.
 If present, a `domainOutput` variable must be listed directly after the corresponding `codomain` variable.
 
-Additional terminal member variables can be added to the terminal as related variables but if they do not fit into one of the above categories, they shall not have a `variableKind' starting with `org.fmi-standard.fmi-ls-struct`. 
+Additional terminal member variables can be added to the terminal as related variables but if they do not fit into one of the above categories, they shall not have a `variableKind` starting with `org.fmi-standard.fmi-ls-struct`. 
 
 
 ==== Definition of map specific `matchingRule`
@@ -230,7 +230,7 @@ include::examples/terminalsAndIcons.xml[]
 
 
 
-=== Referencing Modelica Standard Library libraryCombitables
+=== Referencing Modelica Standard Library Combitables
 
 The Modelica Standard Library defines lookup tables which are stored in a single matrix (https://doc.modelica.org/om/Modelica.Blocks.Tables.html)
 
